<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.utep.cs.cs4330.battleship.MainActivity"
    android:background="@drawable/waterbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/battleship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BattleShip"
            android:gravity="center"
            android:textSize="@dimen/abc_action_bar_stacked_max_height"
            android:fontFamily="@string/abc_action_bar_home_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_shots_0"
            android:id="@+id/countOfHits"
            android:layout_marginTop="20dp"
            android:textColor="?attr/editTextColor"
            android:textStyle="normal|bold"
            android:fontFamily="casual"
            android:textSize="18sp" />

        <edu.utep.cs.cs4330.battleship.BoardView
            android:id="@+id/boardView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:text="@string/new_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newButton" />

    </LinearLayout>

</RelativeLayout>
