<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oceanwclouds"
        android:orientation="vertical" android:weightSum="1">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/sunsetmiami"/>

        <TextView
                android:id="@+id/BattleShip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="74dp"
                android:gravity="center"
                android:text="@string/battleship"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="44sp"/>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:orientation="vertical" android:layout_below="@+id/BattleShip"
                        android:layout_marginTop="20dp" android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20dp">
            <Button
                    android:id="@+id/OneVersusOne"
                    android:layout_width="match_parent"
                    android:text="@string/OneVersusOne"
                    android:textSize="30dp"
                    android:background="@drawable/oceanwclouds"


                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:elevation="0dp" style="@android:style/Widget.Material.Button"
                    android:textColor="@android:color/background_dark"
                    android:layout_above="@+id/Computer" android:layout_marginBottom="30dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp" android:layout_height="100dp"
                    android:fontFamily="serif-monospace" android:textStyle="normal|bold"/>
            <Button
                    android:id="@+id/Computer"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:textSize="30dp"
                    android:background="@drawable/beach"

                    android:text="@string/Computer" android:layout_weight="1"
                    android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp" android:layout_marginStart="5dp"
                    android:textColor="@android:color/background_dark" android:textStyle="normal|bold"
                    android:fontFamily="serif-monospace"
                    android:layout_alignParentBottom="true"/>
            <Button
                    android:id="@+id/start"
                    android:layout_width="match_parent"
                    android:textSize="30sp"
                    android:scaleType="fitXY"
                    android:background="@drawable/boatstore"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/start"
                    android:textColor="?android:attr/textColorPrimaryDisableOnly"
                    android:layout_height="100dp" android:fontFamily="serif-monospace"
                    android:layout_marginBottom="9dp" android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" android:textStyle="normal|bold"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>

