<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/gamebackground"
        android:orientation="vertical"
        android:scaleType="fitXY"
        android:tileMode="repeat">

        <TextView
            android:id="@+id/BattleShip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/battleship"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/countOfHits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/number_of_shots_0"
            android:textColor="?attr/actionModeSplitBackground"
            android:textSize="12sp"
            android:textStyle="normal|bold" />

        <edu.utep.cs.cs4330.battleship.BoardView
            android:id="@+id/boardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/quitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:background="@android:color/holo_red_light"
                android:text="Quit"
                android:textStyle="bold" />

            <Button
                android:id="@+id/newButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="34dp"
                android:layout_marginRight="34dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/new_button_label" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>

